--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,7 @@
 plugins {
     id 'com.android.application'
     id 'kotlin-android'
+    id 'kotlin-kapt'
 }
 
 android {
@@ -44,5 +45,8 @@ dependencies {
     implementation ("androidx.room:room-runtime:2.3.0")
     implementation 'androidx.navigation:navigation-fragment-ktx:2.3.5'
     implementation 'androidx.navigation:navigation-ui-ktx:2.3.5'
-    annotationProcessor "androidx.room:room-compiler:2.3.0"
+    // kapt is annotation processing tool for kotlin, annotationProcessor is for Java
+    kapt "androidx.room:room-compiler:2.3.0"
+    // is needed to use coroutines (suspend functions) with room
+    implementation "androidx.room:room-ktx:2.3.0"
 }
